--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
     "dotenv": "^16.0.3",
     "ebay-oauth-nodejs-client": "^1.2.2",
     "express": "^4.18.2",
+    "heroku": "^7.66.4",
     "jest": "^29.3.1",
-    "python-shell": "^3.0.1",
     "supertest": "^6.3.1"
   },
   "scripts": {
     "start": "node listen.js",
-    "setup": "python3 ./Model/setup.py",
     "test": "jest 0--watch"
   }
 }
