--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "ebay-oauth-nodejs-client": "^1.2.2",
     "express": "^4.18.2",
     "jest": "^29.3.1",
-    "python-shell": "^3.0.1",
     "supertest": "^6.3.1"
   },
   "scripts": {
     "start": "node listen.js",
-    "setup": "python3 ./Model/setup.py",
     "test": "jest 0--watch"
+  },
+  "engines": {
+    "node": "18.7.0"
   }
 }
