--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "final-project-be-ebay",
+  "version": "1.0.0",
+  "description": "final-project-be-ebay",
   "main": "listen.js",
   "dependencies": {
     "axios": "^1.1.3",
@@ -14,5 +17,9 @@
   },
   "engines": {
     "node": "18.7.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/2202Hannah/final-project-be-ebay"
   }
 }
