--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "supertest": "^6.3.1"
   },
   "scripts": {
-    "start": "node listen.js",
+    "start": "node index.js",
     "test": "jest 0--watch"
   },
   "engines": {
