--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "express": "^4.18.2",
     "heroku": "^7.66.4",
     "jest": "^29.3.1",
+    "pg": "^8.8.0",
+    "pg-format": "^1.0.4",
     "supertest": "^6.3.1"
   },
   "scripts": {
+    "setup-dbs": "psql -f ./db/setup.sql",
+    "seed": "node ./db/seeds/run-seed.js",
     "start": "node index.js",
     "test": "jest"
   },
