--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
     "start": "node index.js",
-    "test": "jest"
+    "test": "jest",
+    "seed:prod": "NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed"
   },
   "engines": {
     "node": "18.7.0"
