--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "listen.js",
   "dependencies": {
     "axios": "^1.1.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ebay-oauth-nodejs-client": "^1.2.2",
     "express": "^4.18.2",
